[package]
name = "jarvis-tesla-exporter"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ctor = "0.1"
geoutils = "0.5"
json_env_logger = { version = "0.1", features = ["iso-timestamps", "backtrace"] }
log = { version = "0.4", features = ["kv_unstable_std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking","json"] }
retry = "1.3"
tokio = { version = "1.5", features = ["macros"] }
uuid = { version = "0.8", features = ["v4"] }
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.55" }
kube = { version = "0.70", features = ["runtime", "derive"] }
tungstenite = { version = "0.17", features = ["native-tls"] }