[package]
name = "jarvis-tesla-exporter"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
ctor = "0.1"
geoutils = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking","json"] }
retry = "1.3"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "0.8", features = ["v4"] }
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.65" }
kube = { version = "0.82", default-features = false, features = ["client", "runtime", "derive"] }
tungstenite = { version = "0.17", features = ["native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
